# pythontest

./: .coverage  .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml  readme.md
week1/: __main__.py  hello.py  weather.py  weather_cli.py
week8/: download.py  profile.prof  profile_download.py  sync_download.py
week9/: mini_download_final.py
workflows/: ci.yml
