[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-cli"
version = "0.1.0"
description = "Get current city temperature"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25",
]

[project.scripts]
weather-cli = "weather_cli:main"